fixed container issue with extra padding at view size 354px.

--- a/assets/css/bootstrap-style.css
+++ b/assets/css/bootstrap-style.css
@@ -265,6 +265,7 @@ label {
     font-size: 12px;
 }
 /* navbar 992px + width viewport adjust container alignment */
+
 @media (max-width: 576px) {
     .rounded {
         margin-left: 30%;
@@ -284,11 +285,17 @@ label {
     .col-sm-4 {
         max-width: 50%;
         flex: 0 0 30%;
+        padding-right: 0;
+        padding-left: 0;
     }
     .col-sm-8 {
         /* max-width: 50%; */
         flex: 0 0 70%;
         padding-right: 0;
+        padding-left: 0;
+    }
+    .container {
+        padding-left: 0;
     }
 }
 @media (min-width: 577px) {
